@@ -1,154 +1,140 @@
-
 package ru.finam.backend.service;
 
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Root;
 import lombok.RequiredArgsConstructor;
 
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import ru.finam.backend.model.dto.FinanceInstrumentRequestDTO;
 import ru.finam.backend.model.dto.FinanceInstrumentResponseDTO;
 import ru.finam.backend.model.entities.FinanceInstrumentEntity;
-import ru.finam.backend.repositories.FinanceInstrumentRepository;
 
-import java.util.List;
-import java.util.function.Predicate;
+import ru.finam.backend.validation.ValidationService;
 
 @Service
 @RequiredArgsConstructor
 public class FinanceInstrumentService {
 
-    private final FinanceInstrumentRepository financeInstrumentRepository;
     private final ApplicationUtils applicationUtils;
+    private final ValidationService validationService;
+    private final RedisTemplate<String, Object> redisTemplate;
+    @PersistenceContext
+    private final EntityManager em;
+
+    private static final String KEY = "INSTRUMENTS";
 
 
-    public Page<FinanceInstrumentResponseDTO> getFinanceInstruments(FinanceInstrumentRequestDTO filter,
-                                                                    int offset, int limit){
+    public Page<FinanceInstrumentResponseDTO> getFinanceInstruments(
+            FinanceInstrumentRequestDTO filter, int offset, int limit) throws IndexOutOfBoundsException,
+            IllegalArgumentException {
+        // проверка полей DTO на валидность
+        validationService.checkRequestDTOFieldsAreValid(filter);
 
-        List<FinanceInstrumentEntity> entitylist;
+        // Получение отфильтрованных данных либо из кэша, либо из БД
+        List<FinanceInstrumentEntity> entitylist = getInstruments(filter);
 
-        // получаю с БД либо все данные, либо те, которые с именем или тикером tickerName
-        entitylist = filterInstrumentsByNameOrTicker(filter.getTickerName());
+        // проверка offset и limit на валидность
+        validationService.checkOffsetAndLimitAreValid(offset, limit, entitylist.size());
 
-        // фильтрация по типу инструмента
-        entitylist = filterInstrumentsByInstrumentType(filter.getType(), entitylist);
+        // Преобразование списка сущностей в список responseDTO
+        List<FinanceInstrumentResponseDTO> responseDTOList =
+                applicationUtils.mapToFinanceInstrumentResponseDTOList(entitylist);
 
-        // фильтрация по сектору
-        entitylist = filterInstrumentsBySectorType(filter.getSector(), entitylist);
-
-        // по цене
-        entitylist = filterInstrumentsByPriceRange(filter.getPriceFrom(), filter.getPriceUpTo(), entitylist);
-
-        // по капитализации
-        entitylist = filterInstrumentsByCapitalizationRange(filter.getCapitalizationFrom(),
-                filter.getCapitalizationUpTo(), entitylist);
-
-        // по объему
-        entitylist = filterInstrumentsByAverageTradingVolumeRange(filter.getVolumeFrom(), filter.getVolumeUpTo(),
-                entitylist);
-
-        // перевод в List<FinanceInstrumentResponseDTO>, а затем в Page<FinanceInstrumentResponseDTO>
-        return  applicationUtils.convertListToPage(
-                applicationUtils.mapToFinanceInstrumentResponseDTOList(entitylist),
-                offset,
-                limit);
+        // перевод в Page<FinanceInstrumentResponseDTO> и возвращение
+        return applicationUtils.convertListToPage(responseDTOList, offset, limit);
     }
 
-    private List<FinanceInstrumentEntity> filterInstruments(Predicate<FinanceInstrumentEntity> predicate,
+    private List<FinanceInstrumentEntity> getInstruments(FinanceInstrumentRequestDTO filter){
+        String tickerName = filter.getTickerName();
+        List<FinanceInstrumentEntity> entityList;
+
+        if (redisTemplate.opsForHash().hasKey(KEY, tickerName)) {
+            entityList = (List<FinanceInstrumentEntity>) redisTemplate.opsForHash().get(KEY, tickerName);
+        } else{
+            entityList = getInstrumentsByTickerOrNameFromDB(tickerName);
+        }
+
+        List<FinanceInstrumentEntity> filteredEntityList = filterInstruments(filter, entityList);
+
+        if(!tickerName.isEmpty() && !redisTemplate.opsForHash().hasKey(KEY, tickerName)){
+            redisTemplate.opsForHash().put(KEY, tickerName, filteredEntityList);
+        }
+
+        return sortInstruments(filter.getSortBy(), filter.getSortOrder(), filteredEntityList);
+    }
+
+    private List<FinanceInstrumentEntity> getInstrumentsByTickerOrNameFromDB(String tickerName){
+        CriteriaBuilder cb = em.getCriteriaBuilder();
+        CriteriaQuery<FinanceInstrumentEntity> cr =
+                cb.createQuery(FinanceInstrumentEntity.class);
+        Root<FinanceInstrumentEntity> root =
+                cr.from(FinanceInstrumentEntity.class);
+
+        root.fetch("firm").fetch("sector");
+        root.fetch("instrumentType");
+
+        if (!tickerName.isEmpty()) {
+            cr.where(cb.or(
+                    cb.like(root.get("firm").get("ticker"), "%" + tickerName + "%"),
+                    cb.like(root.get("firm").get("name"), "%" + tickerName + "%")
+            ));
+        }
+
+        cr.select(root);
+
+        return em.createQuery(cr).getResultList();
+
+    }
+
+    private List<FinanceInstrumentEntity> filterInstruments(FinanceInstrumentRequestDTO filter,
                                                             List<FinanceInstrumentEntity> l){
-        return l.parallelStream()
-                .filter(predicate)
-                .toList();
+
+        Predicate<FinanceInstrumentEntity> filterPredicate = fi -> {
+            return fi.getFirm().getSector().getName().equals(filter.getSector()) &&
+                    fi.getInstrumentType().getName().equals(filter.getType()) &&
+                    applicationUtils.isInRange(fi.getPrice(), filter.getPriceFrom(), filter.getPriceUpTo()) &&
+                    applicationUtils.isInRange(fi.getAverageTradingVolume(), filter.getVolumeFrom(),
+                            filter.getVolumeUpTo()) &&
+                    applicationUtils.isInRange(fi.getFirm().getCapitalization(), filter.getCapitalizationFrom(),
+                            filter.getCapitalizationUpTo());
+        };
+
+        return l.parallelStream().filter(filterPredicate).collect(Collectors.toList());
     }
 
-    private List<FinanceInstrumentEntity> filterInstrumentsByNameOrTicker(String tickerName){
-        return tickerName.isEmpty() ? financeInstrumentRepository.findAll() :
-                financeInstrumentRepository.findFinanceInstrumentsByNameOrTicker(tickerName, tickerName);
+    private List<FinanceInstrumentEntity> sortInstruments(String sortBy, String sortOrder,
+                                                            List<FinanceInstrumentEntity> l){
+        List<FinanceInstrumentEntity> sortedEntityList = new ArrayList<>();
+
+        switch (sortBy) {
+            case "price" -> sortedEntityList = l.parallelStream().sorted((fi1, fi2) -> {
+                return sortOrder.equals("asc") ? Float.compare(fi1.getPrice(), fi2.getPrice()) :
+                        Float.compare(fi2.getPrice(), fi1.getPrice());
+            }).toList();
+            case "averageTradingVolume" -> sortedEntityList = l.parallelStream().sorted((fi1, fi2) -> {
+                return sortOrder.equals("asc") ?
+                        Float.compare(fi1.getAverageTradingVolume(), fi2.getAverageTradingVolume()) :
+                        Float.compare(fi2.getAverageTradingVolume(), fi1.getAverageTradingVolume());
+            }).toList();
+            case "capitalization" -> sortedEntityList = l.parallelStream().sorted((fi1, fi2) -> {
+                return sortOrder.equals("asc") ?
+                        Float.compare(fi1.getFirm().getCapitalization(), fi2.getFirm().getCapitalization()) :
+                        Float.compare(fi2.getFirm().getCapitalization(), fi1.getFirm().getCapitalization());
+            }).toList();
+            default -> throw new IllegalArgumentException("Данного поля для сортировки не существует : " + sortBy);
+        }
+
+        return sortedEntityList;
     }
-
-
-    private List<FinanceInstrumentEntity> filterInstrumentsBySectorType(String type, List<FinanceInstrumentEntity> l ){
-        return !type.isEmpty()
-                ? filterInstruments(
-                fiEntity -> fiEntity.getFirm().getSector().getName().equals(type),
-                l)
-                : l;
-
-    }
-
-    private List<FinanceInstrumentEntity> filterInstrumentsByInstrumentType(String type, List<FinanceInstrumentEntity> l){
-        return !type.isEmpty()
-                ? filterInstruments(
-                fiEntity -> fiEntity.getInstrumentType().getName().equals(type),
-                l)
-                : l;
-    }
-
-    private List<FinanceInstrumentEntity> filterInstrumentsByPriceRange(String from, String upTo,
-                                                                        List<FinanceInstrumentEntity> l){
-        return  !from.isEmpty() && !upTo.isEmpty()
-                ? filterInstruments(
-                fiEntity -> applicationUtils.isInRange(fiEntity.getPrice(),
-                        Float.parseFloat(from),
-                        Float.parseFloat(upTo)),
-                l)
-                : l;
-    }
-
-    private List<FinanceInstrumentEntity> filterInstrumentsByCapitalizationRange(String from, String upTo,
-                                                                                 List<FinanceInstrumentEntity> l){
-        return !from.isEmpty() && !upTo.isEmpty()
-                ?  filterInstruments(
-                fiEntity -> applicationUtils.isInRange(fiEntity.getFirm().getCapitalization(),
-                        Float.parseFloat(from),
-                        Float.parseFloat(upTo)),
-                l)
-                : l;
-    }
-
-    private List<FinanceInstrumentEntity> filterInstrumentsByAverageTradingVolumeRange(String from,String upTo,
-                                                                                       List<FinanceInstrumentEntity> l){
-        return !from.isEmpty() && !upTo.isEmpty()
-                ? filterInstruments(
-                fiEntity -> applicationUtils.isInRange(fiEntity.getAverageTradingVolume(),
-                        Float.parseFloat(from),
-                        Float.parseFloat(upTo)), l)
-                : l;
-    }
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsByFirmNameOrTicker(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsByInstrumentTypeName(filter.getTickerName());
-    }
-
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsByInstrumentTypeName(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsByInstrumentTypeName(filter.getType());
-
-    }
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsBySector(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsBySector(filter.getSector());
-    }
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsByPriceRange(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsByPriceRange(
-                Float.parseFloat(filter.getPriceFrom()),
-                Float.parseFloat(filter.getPriceUpTo()));
-    }
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsByCapitalizationRange(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsByCapitalizationRange(
-                Float.parseFloat(filter.getCapitalizationFrom()),
-                Float.parseFloat(filter.getCapitalizationUpTo())
-        );
-    }
-
-    private List<FinanceInstrumentEntity> findFinanceInstrumentsByTradingVolumeRange(FinanceInstrumentRequestDTO filter){
-        return financeInstrumentRepository.findFinanceInstrumentsByTradingVolumeRange(
-                Float.parseFloat(filter.getVolumeFrom()), Float.parseFloat(filter.getVolumeUpTo())
-        );
-    }
-
 }
